--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eDv-vI-icb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
@@ -46,10 +46,41 @@
                     <view key="view" contentMode="scaleToFill" id="SBg-nF-Gr7">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uup-LK-90M">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="9rj-2x-8ra" customClass="StoryCell" customModule="MyArchive" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9rj-2x-8ra" id="G8d-EA-7el">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="zLT-3T-nz1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="uup-LK-90M" firstAttribute="top" secondItem="zLT-3T-nz1" secondAttribute="top" id="9Vv-f4-RMn"/>
+                            <constraint firstItem="zLT-3T-nz1" firstAttribute="bottom" secondItem="uup-LK-90M" secondAttribute="bottom" id="Eyd-gJ-pSn"/>
+                            <constraint firstItem="uup-LK-90M" firstAttribute="leading" secondItem="zLT-3T-nz1" secondAttribute="leading" id="SSE-Tw-qBe"/>
+                            <constraint firstItem="zLT-3T-nz1" firstAttribute="trailing" secondItem="uup-LK-90M" secondAttribute="trailing" id="W7e-FQ-i1W"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="BGJ-WJ-Wvl"/>
+                    <navigationItem key="navigationItem" id="BGJ-WJ-Wvl">
+                        <barButtonItem key="rightBarButtonItem" title="Logout" id="e5v-dn-p6i">
+                            <connections>
+                                <action selector="onLogoutTapped:" destination="vAd-1v-ztK" id="mMh-e8-Xr2"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="uup-LK-90M" id="xmY-HI-5RK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LP1-R9-zx4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
